# Tiny-AlphaZero

./: AGENT_ACTION_LOG.md  README.md  Tiny_AlphaZero.ipynb  debug_rocm.py  pyproject.toml  tiny_alphazero_spec.md
config/: phase1.yaml
context_bundle/data_heads/: boards.dat.head  legal_moves.dat.head  legal_moves_offsets.dat.head  moves.dat.head  outcomes.dat.head  sample_games_small.json.head
data/: self_play_game.json
data/phase1_small/: meta.json
scripts/: convert_to_memmap.py  generate_data.py  generate_self_play.py  run_full_pipeline.sh  train_phase1.py  train_phase2.py  visual_dashboard.py
src/: benchmarks.py
src/data/: dataset.py  encoding.py  generation.py
src/mcts/: __init__.py  batched.py  node.py  tree.py
src/model/: __init__.py  encoding.py  transformer.py
src/tiny_alphazero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/training/: evaluation.py  phase1.py  phase2.py  pool.py  replay.py
tests/: conftest.py  test_arena.py  test_encoding.py  test_mcts.py  test_model.py
